# mus3328-exemples

./: README.md
actionneurs/DC-closed loop/encoder_read_output/: encoder_read_output.ino
actionneurs/DC-open loop/arduino_DCmotor_open_loop/: arduino_DCmotor_open_loop.ino
actionneurs/neopixelSLIP/: neopixelSLIP.ino  neopixelSLIP.maxpat  neopixelSLIP.scd
actionneurs/servoSLIP/: servoSLIP.ino  servoSLIP.maxpat  servoSLIP.scd
actionneurs/solenoideSLIP/: solenoidSLIP.scd  solenoideSLIP.ino
actionneurs/stepper/: stepper.ino
actionneurs/stepperSLIP/: stepperSLIP.ino  stepperSLIP.scd
actionneurs/stepperSLIP2/: stepperSLIP2.ino  stepperSLIP2.maxpat
analogRead/: analogRead.ino
capteurs/IMU/granular/: granular-example.maxpat  granular-mapping-101.maxpat  polygrain~.maxpat
capteurs/IMU/mpu6050/mpu6050/: mpu6050.ino  mpu6050.scd
capteurs/ultrason/ultrason/: ultrason.ino
mapping/: wekinatorMapping.maxpat  wekinatorMappingGranulotron.scd
mapping/WekinatorProject/: WekinatorProject.wekproj  inputConfig.xml
mapping/WekinatorProject/current/: currentData.arff
mapping/WekinatorProject/current/models/: model0.xml  model1.xml  model2.xml  model3.xml  model4.xml
platformio/test1/: CMakeLists.txt  Makefile  platformio.ini
platformio/test1/src/: main.cpp  main.cpp~
protocoles/: midiMPE.scd
protocoles/hid/hid-joystick/: squarewave.scd
protocoles/hid/max/: hi.maxhelp
protocoles/hid/puredata/: hid-joystick.pd
protocoles/hid/wacom/: wacomOSCrecGranulotron.scd  wacomOSCsend.pd  wacomOSCsend.scd  wacomOSCsend_laptopX230.pd
protocoles/ip/osc/: OSC-SuperCollider.scd
protocoles/ip/udp-tcp/: 1.UPD-TCP-example.pd
vision/: suivideCouleur.toe
vision/Backup/: suivideCouleur.1.toe
vision/suivi et gestion arriere-plan/VNS remix/: vns_receiver_sc.scd  vns_remix receiver.pd
vision/suivi et gestion arriere-plan/virtual launchpad/: vlaunchpad.scd
(+81 files in other folders)
